# 2kurs-BPM-17-1

./: .gitignore  CMakeLists.txt
labs/: CMakeLists.txt
labs/complex/: CMakeLists.txt  complex.cpp  complex.h  complex_test.cpp
labs/dynamicalarray/: CMakeLists.txt  dynamicalarray.cpp  dynamicalarray.h  dynamicalarray_test.cpp
labs/matrix/: CMakeLists.txt  matrix.cpp  matrix.h  matrix_test.cpp
labs/rational/: rational.cpp  rational.h  rational_test.cpp
prj.coursework/: CMakeLists.txt  users.db
prj.coursework/baza_volonterov/: CMakeLists.txt  adlog.cpp  adlog.h  adlog.ui  admin.cpp  admin.h  admin.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.cpp  profile.h  profile.ui  redact.cpp  redact.h  redact.ui  signup.cpp  signup.h  signup.ui  voldoc.cpp  voldoc.h  voldoc.ui
prj.labs/: CMakeLists.txt
prj.labs/complex/: complex.cpp  complex.h
prj.labs/dynamical_array/: CMakeLists.txt  dynamical_array.cpp  dynamical_array.h
prj.labs/matrix/: matrix.cpp  matrix.h  matrix_test.cpp
prj.labs/priority_queue/: CMakeLists.txt  priority_queue.cpp  priority_queue.h
prj.labs/queue_on_array/: CMakeLists.txt  queue_on_array.cpp  queue_on_array.h  queue_on_array_test.cpp
prj.labs/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.labs/stack_on_list/: CMakeLists.txt  stack_on_list.cpp  stack_on_list.h  stack_on_list_test.cpp
prj.labs/tests/: CMakeLists.txt  complex_test.cpp  dynamical_array_test.cpp  matrix_test.cpp  priority_queue_test.cpp  queue_on_array_test.cpp  rational_test.cpp  stack_on_list_test.cpp
